# pyweaving2

./: .gitignore  CHANGES  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
docs/: api.rst  cmd.rst  conf.py  index.rst  quickstart.rst  tutorial.rst
src/pyweaving2/: __init__.py  cmd.py  instructions.py  render.py  wif.py
src/pyweaving2/generators/: dither.py  raster.py  tartan.py  twill.py
src/pyweaving2/tests/: test_draft.py  test_general.py  test_generators.py  test_render.py
src/pyweaving2/tests/data/: schort.wif
