[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib",]

[project]
name = "pyweaving2"
version = "0.0.2"
authors = [
  { name="Jan Harm de Boer", email="jhthuis@gmail.com" },
]
description = "An aid for showing and changing wif files for weaving."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pillow",
]

[project.scripts]
pyweaving2 = "pyweaving2.cmd:main"

[project.urls]
Homepage = "https://github.com/jan-harm/pyweaving2"
Issues = "https://github.com/jan-harm/pyweaving2/issues"